# cog-vllm

./: .dockerignore  .gitignore  CLAUDE.md  README.md  cog.yaml  predict.py  predictor_config.json  prompt_templates.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.sh  test2.sh  train.py  utils.py
tests/unit/: test_predict.py
