[project]
name = "cog-vllm"
version = "0.2.0"
description = ""
authors = []
dependencies = [
    "aiohttp[speedups]>=3.9.5",
    "cffi>=2.0.0",
    "numpy>=2.0.0",
    "scipy>=1.13.1",
    "sentencepiece>=0.2.1",
    "protobuf>=5.27.0",
    "huggingface-hub>=0.23.2",
    "httpx>=0.27.0",
    "tqdm>=4.66.4",
    "torch==2.9.0",
    "jinja2>=3.1.4",
    "pillow>=10.0.0",
]
readme = "README.md"
requires-python = ">= 3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cog_vllm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
